<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cadastro"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/titulo_cadastro"/>


    <View
        android:id="@+id/containerComponentsCadastro"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_cadastro"
        />


    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:hint="@string/nome"
        android:drawableRight="@drawable/ic_pessoa"
        android:inputType="textAutoComplete"
        android:maxLength="25"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsCadastro"
        app:layout_constraintTop_toTopOf="@id/containerComponentsCadastro" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsCadastro"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCadastro"
        app:layout_constraintTop_toBottomOf="@id/edit_nome" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/ic_pass"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsCadastro"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponentsCadastro"
        android:hint="@string/registrar"
        android:id="@+id/entrar"
        android:layout_marginTop="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>